# dex_control

./: .gitignore  .gitmodules  CITATION.cff  README.md  pyproject.toml  setup.py  sync_infra.sh
.docker/: Dockerfile.nuc
assets/fr3/: fr3.urdf
config/: kinesthetic_teaching.yaml  robot.yaml
dex_control/: run.py
dex_control.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dex_control/camera/: gopro_mp4.py  mp4_reader.py  multi_camera_wrapper.py  realsense.py  svo_reader.py  zed_camera.py
dex_control/data/: collect_demo.py  image_transform.py  timeste_processer.py  trajectory.py
dex_control/gripper/: FR_hand.py  keyboard_control.py  robotiq.py
dex_control/proto/: franka.proto  franka_pb2.py  franka_pb2_grpc.py
dex_control/robot/: client.py  control.py  franka_wrapper.py  robot_client.py
dex_control/teleop/: controller.py  gello.py  spacemouse.py
dex_control/teleop/factr/: factr_teleop_franka_ros2.py  run_factr.py
dex_control/teleop/kinesthetic_teaching/: __init__.py  kinesthetic_teaching.py
dex_control/utils/: zmq_publisher.py
dex_control/utils/misc/: parameters.py  robot_visualizer.py  server_inference.py
docs/: DATA_COLLECT.md  GRPC_DEV.md  ROBOT_PC.md  TELEOP.md
examples/: 0_basic_control.py  1_spacemouse_teleop.py  2_tracker_teleop.py  3_zmq_bridge.py  4_kinesthetic_teaching.py  5_test.py  6_reset.py  7_replay.py
scripts/: cpu_performance.sh  data_collect.py  install.sh  remote_spacemouse.py  reset_robot.py  start_client.py  start_robot_server.py  sync_infra.sh
scripts/calibration/: CAMERA_CALI.md  cali_eye2hand.py  kinesthetic_teaching_cali.py
test/: sim.py
tests/: test_grpc.py  test_zerorpc.py
