[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dex-control"
version = "0.1.0"
description = "Remote control framework for Franka arm using zerorpc"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jinzhou Li", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Robotics",
]

dependencies = [
    "zerorpc>=0.6.3",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pyserial>=3.5",
    "hidapi>=0.14.0",
    "pyyaml>=5.4.1",
    "matplotlib>=3.0.0",
    "pillow>=9.3.0",
    "pytz>=2020.1",
    "typeguard>=2.13",
]

[project.optional-dependencies]
ruckig = [
    "ruckig>=0.15.3",
]
zmq = [
    "pyzmq>=25.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
all = [
    "ruckig>=0.15.3",
    "pyzmq>=25.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/dex-control"
Repository = "https://github.com/yourusername/dex-control"
Issues = "https://github.com/yourusername/dex-control/issues"

[tool.setuptools]
packages = {find = {}}
package-dir = {"" = "."}

[tool.setuptools.package-data]
"*" = ["*.py", "*.md", "*.txt"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "E266", "E501", "W503"]
exclude = [".git", "__pycache__", "build", "dist", "*.egg-info"]
